# InfoChallengeBot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  dotenv  mkdocs.yml  pyproject.toml  requirements.txt
cogs/: manager.py  registration.py  registrations.py  registrator.py  teambuilder.py
common/: checks.py  logging.py
docker/: Dockerfile  docker-compose.yaml
docs/: about.md  index.md  registration.md
models/: __init__.py  convostep.py  participant.py  registration.py
src/: bot.py
src/cogs/: manager.py  registrator.py  teambuilder.py
src/models/: __init__.py  convostate.py  participant.py  registration.py  team.py  teamparticipant.py  teamregistration.py
